--- a/pom.xml
+++ b/pom.xml
@@ -22,7 +22,7 @@
 		<spring.version>5.1.2.RELEASE</spring.version>
 		<junit.version>4.11</junit.version>
 		<log4j.version>1.2.17</log4j.version>
-		<sonar.host.url>//http://44.201.122.128:9000/</sonar.host.url> 
+		<sonar.host.url>http://54.84.206.103:9000/</sonar.host.url> 
 		<sonar.login>admin</sonar.login>
 		<sonar.password>admin</sonar.password> 
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
@@ -93,19 +93,18 @@
 	</dependencies>	
 
 	<distributionManagement>
-	    <repository>
-	      <id>nexus</id>
-	      <name>maven-releases</name>
-	      <url>http://http://54.144.123.198:8081/repository/maven-releases/</url>
-	    </repository>
-	    
-	    <snapshotRepository>
-	      <id>nexus</id>
-	      <name>maven-snapshots</name>
-	      <url>http://54.144.123.198:8081/repository/maven-snapshots/</url>
-	    </snapshotRepository>
-	    
-	</distributionManagement>
+            <repository>
+              <id>nexus</id>
+              <name>spring_releases/name>
+              <url>http://44.202.87.252:8081/repository/spring_releases/</url>
+            </repository>
+
+            <snapshotRepository>
+              <id>nexus</id>
+              <name>spring_snapshots</name>
+              <url>http://44.202.87.252:8081/repository/spring_snapshots/</url>
+            </snapshotRepository>
+</distributionManagement>
 	
 	<build>
 		<finalName>tesla</finalName>
