--- a/pom.xml
+++ b/pom.xml
@@ -143,7 +143,7 @@
 					<wtpContextName>maven-web-application</wtpContextName>
 				</configuration>
 			</plugin>
-			//nothing here
+			//nothing 
 			
 </plugins>
 	</build>
